--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>EventTracker</name>
+    <name>Event</name>
     <description>An app to track our Events</description>
 
     <parent>
